TenantLocation updates for delivery price and Adyen integration in progress

--- a/WMS/Views/Theme/Default/TenantLocations/Edit.cshtml
+++ b/WMS/Views/Theme/Default/TenantLocations/Edit.cshtml
@@ -32,95 +32,108 @@
     @Html.HiddenFor(model => model.DateCreated)
 
 
-    <div class="col-md-6 pull-left">
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.WarehouseName, new { @class = "col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.WarehouseName)
-                @Html.ValidationMessageFor(model => model.WarehouseName)
-            </div>
-        </div>
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.AddressLine1, new { @class = "col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.AddressLine1)
-                @Html.ValidationMessageFor(model => model.AddressLine1)
-            </div>
-        </div>
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.AddressLine2, new { @class = "col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.AddressLine2)
-                @Html.ValidationMessageFor(model => model.AddressLine2)
-            </div>
-        </div>
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.AddressLine3, new { @class = "col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.AddressLine3)
-                @Html.ValidationMessageFor(model => model.AddressLine3)
-            </div>
-        </div>
-        <div class="input-group h-100 justify-content-center align-items-center">
-            <label class="col-md-4"> Pallet Tracking Scheme</label>
-            <div class="col-md-8">
-                @Html.EnumDropDownListFor(m => m.PalletTrackingScheme, new { @class = "chosen-select" })
-                @Html.ValidationMessageFor(model => model.PalletTrackingScheme)
-            </div>
-        </div>
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.AllowStocktakeAddNew, new { @class = "col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.AllowStocktakeAddNew)
-                @Html.ValidationMessageFor(model => model.AllowStocktakeAddNew)
-            </div>
-        </div>
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.ConsolidateOrderProcesses, new { @class = "col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.ConsolidateOrderProcesses)
-                @Html.ValidationMessageFor(model => model.ConsolidateOrderProcesses)
-            </div>
-        </div>
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.AutoAllowProcess, new { @class = "col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.AutoAllowProcess)
-                @Html.ValidationMessageFor(model => model.AutoAllowProcess)
-            </div>
-        </div>
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.AllowShipToAccountAddress, new { @class = "col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.AllowShipToAccountAddress)
-                @Html.ValidationMessageFor(model => model.AllowShipToAccountAddress)
-            </div>
-        </div>
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.SendOrderStatusByEmail, new { @class = "col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.SendOrderStatusByEmail)
-                @Html.ValidationMessageFor(model => model.SendOrderStatusByEmail)
-            </div>
-        </div>
-
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.SendOrderStatusBySms, new { @class = "col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.SendOrderStatusBySms)
-                @Html.ValidationMessageFor(model => model.SendOrderStatusBySms)
-            </div>
-        </div>
-
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.NotifiableOrderStatuses, new { @class = "col-md-4" })
-            <div class="col-md-8">
-                @Html.ListBox("SelectedNotifiableOrderStatuses",
-                                           new MultiSelectList(Enum.GetValues(typeof(OrderStatusEnum)).Cast<OrderStatusEnum>().Select(v => new { Id = (int)v, Value = v.ToString() }).ToList(), "Id", "Value"),
-                                           new { @class = "chosen-select", Multiple = "multiple" })
-            </div>
+<div class="col-md-6 pull-left">
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.WarehouseName, new { @class = "col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.WarehouseName)
+            @Html.ValidationMessageFor(model => model.WarehouseName)
         </div>
     </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.AddressLine1, new { @class = "col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.AddressLine1)
+            @Html.ValidationMessageFor(model => model.AddressLine1)
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.AddressLine2, new { @class = "col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.AddressLine2)
+            @Html.ValidationMessageFor(model => model.AddressLine2)
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.AddressLine3, new { @class = "col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.AddressLine3)
+            @Html.ValidationMessageFor(model => model.AddressLine3)
+        </div>
+    </div>
+
+
+
+
+    <div class="input-group h-100 justify-content-center align-items-center">
+        <label class="col-md-4"> Pallet Tracking Scheme</label>
+        <div class="col-md-8">
+            @Html.EnumDropDownListFor(m => m.PalletTrackingScheme, new { @class = "chosen-select" })
+            @Html.ValidationMessageFor(model => model.PalletTrackingScheme)
+        </div>
+    </div>
+
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(m => m.DeliveryMinimumOrderValue, new { @class = "col-md-4" })
+        <div class="col-md-8">
+
+            @Html.TextBoxFor(m => m.DeliveryMinimumOrderValue, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.DeliveryMinimumOrderValue)
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.AllowStocktakeAddNew, new { @class = "col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.AllowStocktakeAddNew)
+            @Html.ValidationMessageFor(model => model.AllowStocktakeAddNew)
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.ConsolidateOrderProcesses, new { @class = "col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.ConsolidateOrderProcesses)
+            @Html.ValidationMessageFor(model => model.ConsolidateOrderProcesses)
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.AutoAllowProcess, new { @class = "col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.AutoAllowProcess)
+            @Html.ValidationMessageFor(model => model.AutoAllowProcess)
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.AllowShipToAccountAddress, new { @class = "col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.AllowShipToAccountAddress)
+            @Html.ValidationMessageFor(model => model.AllowShipToAccountAddress)
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.SendOrderStatusByEmail, new { @class = "col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.SendOrderStatusByEmail)
+            @Html.ValidationMessageFor(model => model.SendOrderStatusByEmail)
+        </div>
+    </div>
+
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.SendOrderStatusBySms, new { @class = "col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.SendOrderStatusBySms)
+            @Html.ValidationMessageFor(model => model.SendOrderStatusBySms)
+        </div>
+    </div>
+
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.NotifiableOrderStatuses, new { @class = "col-md-4" })
+        <div class="col-md-8">
+            @Html.ListBox("SelectedNotifiableOrderStatuses",
+                                       new MultiSelectList(Enum.GetValues(typeof(OrderStatusEnum)).Cast<OrderStatusEnum>().Select(v => new { Id = (int)v, Value = v.ToString() }).ToList(), "Id", "Value"),
+                                       new { @class = "chosen-select", Multiple = "multiple" })
+        </div>
+    </div>
+</div>
     <div class="col-md-6 pull-left">
         <div class="input-group h-100 justify-content-center align-items-center">
             @Html.LabelFor(model => model.CountyState, new { @class = "col-md-4" })
@@ -143,6 +156,14 @@
                 @Html.ValidationMessageFor(model => model.PostalCode)
             </div>
         </div>
+    
+        <div class="input-group h-100 justify-content-center align-items-center">
+            @Html.LabelFor(model => model.Description, new { @class = "col-md-4" })
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.Description)
+                @Html.ValidationMessageFor(model => model.Description)
+            </div>
+        </div>
         <div class="input-group h-100 justify-content-center align-items-center">
             @Html.LabelFor(model => model.CountryID, "Country", new { @class = "col-md-4" })
             <div class="col-md-8">
@@ -151,10 +172,11 @@
             </div>
         </div>
         <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.Description, new { @class = "col-md-4" })
+            @Html.LabelFor(m => m.DeliveryMinimumOrderValueForFree, new { @class = "col-md-4" })
             <div class="col-md-8">
-                @Html.EditorFor(model => model.Description)
-                @Html.ValidationMessageFor(model => model.Description)
+
+                @Html.TextBoxFor(m => m.DeliveryMinimumOrderValueForFree, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.DeliveryMinimumOrderValueForFree)
             </div>
         </div>
         <div class="input-group h-100 justify-content-center align-items-center">
