--- a/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmOrder.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmOrder.cshtml
@@ -171,7 +171,7 @@
                         }
                         <div class="saveAddrWrap mt-3 ml-3 mr-3 payment-bottom-btn">
                             <div class="button-submit">
-                                <button type="Submit" name="submitNewsletter" class="saveAddrBtn">PROCEED TO PAYMENT</button>
+                                <button type="Submit" name="btn-proceed-payment" class="saveAddrBtn">PROCEED TO PAYMENT</button>
                                 <a href="@Url.Action("checkout", "orders", new { step = (int)CheckoutStep.PaymentDetails })" class="saveAddrBtn mt-3">BACK</a>
                             </div>
                         </div>
