PrestaShop address fields mapping, delivery service selection and country mapping issues fixed

--- a/WMS/Views/Theme/Default/SalesOrders/Edit.cshtml
+++ b/WMS/Views/Theme/Default/SalesOrders/Edit.cshtml
@@ -39,6 +39,7 @@
     @Html.AntiForgeryToken()
     @Html.Hidden("selkeyhdPrddet", 100);
     @Html.HiddenFor(m => m.OrderID);
+    @Html.HiddenFor(m => m.ApiCredentialId);
     @Html.Hidden("LastShipmentAddressId", Model.ShipmentAccountAddressId)
     @Html.Hidden("orderSaveAndProcess", 0)
     @Html.Hidden("fragment", ViewBag.Fragment as string)
