--- a/WMS/Views/Theme/Default/Order/_SalesOrders.cshtml
+++ b/WMS/Views/Theme/Default/Order/_SalesOrders.cshtml
@@ -155,7 +155,16 @@
         {
             settings.Columns.Add(c =>
             {
-                c.FieldName = "Delivery";
+                c.FieldName = "DeliveryMethod";
+                c.Caption = "Delivery Method";
+                c.Width = Unit.Percentage(10);
+                c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+                c.Settings.AllowSort = DefaultBoolean.True;
+            });
+
+            settings.Columns.Add(c =>
+            {
+                c.FieldName = "TenantDeliveryServiceDescription";
                 c.Caption = "Delivery Service";
                 c.Width = Unit.Percentage(10);
                 c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
