DPD filed mapping improved + address name field added

--- a/WMS/Views/Theme/Default/PurchaseOrders/BlindShipment.cshtml
+++ b/WMS/Views/Theme/Default/PurchaseOrders/BlindShipment.cshtml
@@ -225,6 +225,13 @@
         </div>
     </div>
     <div class="input-group h-100 justify-content-center align-items-center">
+        <label class="col-md-4">Shipment Address Name</label>
+        <div class="col-md-8">
+            @Html.TextBox("ShipmentAddressName", "", new { placeholder = "Name", @class = "form-control" })
+
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
         <label class="col-md-4">Shipment Address Line 1</label>
         <div class="col-md-8">
             @Html.TextBox("ShipmentAddressLine1", "", new { placeholder = "Address Line1", @class = "form-control" })
