Working with Review order screen

--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -7437,3 +7437,8 @@ input[type="checkbox"] {
 .product-extra-detail > * {
     white-space: nowrap
 }
+
+.text-pink,
+.text-pink:hover {
+    color: #f33655;
+}
