--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success" onclick="CartItemCount();">Continue Shoping</button>
-                    <a href="@Url.Action("AddToCart","Products")" type="button" class="btn btn-default">Go to Basket</a>
+                    <a href="@Url.Action("ReviewOrder","Orders")" type="button" class="btn btn-default">Go to Basket</a>
                 </div>
             </div>
         </div>
