--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemModal.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemModal.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="botomBtnsec modal-footer">
                 <button class="btmbtn sho" onclick="CartItemCount();">CONTINUE SHOPPING</button>
-                <button class="btmbtn pro" onclick="window.location.href='@Url.Action("AddToCart", "Products")'">Go To Basket</button>
+                <button class="btmbtn pro" onclick="window.location.href='@Url.Action("ReviewOrder","Orders")'">Go To Basket</button>
             </div>
         </div>
     </div>
