--- a/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
@@ -104,7 +104,7 @@
                 }
             </li>
             <li class="cartIcoWrap sir">
-                <a href="@Url.Action("AddToCart","Products")">
+                <a href="@Url.Action("ReviewOrder","Orders")">
                     <i class="ico icon-shopping-cart"></i>
                     <span id="cart-total">@(ViewBag.CartItemCount ?? "")</span>
                 </a>
