--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -7442,3 +7442,23 @@ input[type="checkbox"] {
 .text-pink:hover {
     color: #f33655;
 }
+
+.header-ul-left-pink::after {
+    content: "";
+    width: 50px;
+    height: 3px;
+    background-color: #f33655;
+    position: absolute;
+    margin-top:10px;
+}
+
+.header-ul-center-pink::after {
+    content: "";
+    position: absolute;
+    bottom: 12px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 20%;
+    height: 2px;
+    background-color: #f33655;
+}
