--- a/WarehouseEcommerce/Views/Theme/University/Orders/Payments/ReviewOrder.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/Payments/ReviewOrder.cshtml
@@ -2,6 +2,7 @@
 @model Ganedata.Core.Entities.Domain.ReviewOrderViewModel
 @{
     ViewBag.Title = "Review Order";
+    var address = Model.Cart.ShippmentAddresses.FirstOrDefault();
 }
 
 <section class="nb_sec nb_prdlisting_pgsec nb_sec_pb">
@@ -19,7 +20,7 @@
                 </nav>
             </div>
         </div>
-        @if (Model.CartItems != null && Model.CartItems.Any())
+        @if (Model.Cart.WebsiteCartItems != null && Model.Cart.WebsiteCartItems.Any())
         {
             <div class="nb_sec checkconfirmSec">
                 @Html.Partial("Payments/_OrderProgressBar", OrderProgressStep.ReviewItems)
@@ -27,7 +28,7 @@
                 <div class="mb-4 col-12">
                     <div class="row">
                         <div class="col botomBtnsec justify-content-start"><a class="btmbtn sho" href="@Url.Action("List", "Products")">CONTINUE SHOPPING</a></div>
-                        <div class="col text-center"><h5 class="font-weight-bold">REVIEW ORDER</h5></div>
+                        <div class="col text-center"><h5 class="font-weight-bold header-ul-center-pink">REVIEW ORDER</h5></div>
                         <div class="col text-right botomBtnsec justify-content-end"><button type="Submit" class="btmbtn pro">PROCEED TO PAYMENT</button></div>
                     </div>
                 </div>
@@ -35,32 +36,45 @@
                 <div class="bg-light p-3">
                     <div class="row">
                         <div class="col">
-                            <h6 class="mb-2">Delivery Address <a href="#" class="text-pink small">Change</a></h6>
-                            <p>
-                                position: relative so that any children or
-                                pseudo elements can be positioned relative to itself.
-                                Set position:  The double colon replaced
-                                the single-colon notation for pseudo-elements in CSS3. This
-                            </p>
-                            <a href="#" class="text-pink small">Add Delivery instruction</a>
+                            <h6 class="mb-2">Delivery Address <a href="#" id="linkChangeDelAddress" class="text-pink small">@(address==null?"Add": "Change")</a></h6>
+                            <div>
+                                @if (address != null)
+                                {
+                                    <p>
+                                        @Html.Partial("_AddressDetail", address)
+                                    </p>
+                                    <a href="#" class="text-pink small">Add Delivery instruction</a>
+                                }
+                                else
+                                {
+                                    <span>Not available</span>
+                                }
+                            </div>
                         </div>
                         <div class="col">
-                            <h6 class="mb-2">Billing Address <a href="#" class="text-pink small">Change</a></h6>
+                            @if (address != null)
+                            {
+                                <h6 class="mb-2">Billing Address <a href="#" id="linkChangeBillAddress" class="text-pink small">Change</a></h6>
+                            }
                             <p>
-                                position: relative so that any children or
-                                pseudo elements can be positioned relative to itself.
-                                Set position:  The double colon replaced
-                                the single-colon notation for pseudo-elements in CSS3. This
+                                @if (address != null)
+                                {
+                                    @Html.Partial("_AddressDetail", address)
+                                }
+                                else
+                                {
+                                    <span>Not available </span>
+                                }
                             </p>
                         </div>
                         <div class="col">
                             <h6 class="mb-2">Delivery Options</h6>
                             <div class="mb-3">
-                                <div class="d-flex align-items-center">
-                                    <input type="radio" name="DeliveryOpt" id="DeliveryOpt1" /> <label for="DeliveryOpt1">Next Day Delivery &pound;<span>10</span></label>
+                                <div class="d-flex align-items-center">                                    
+                                    <input type="radio" name="IsStandardDelivery" id="DeliveryOpt1" @(!Model.IsStandardDelivery?"checked":"") /> <label for="DeliveryOpt1">Next Day Delivery &pound;<span>10</span></label>
                                 </div>
                                 <div class="d-flex align-items-center">
-                                    <input type="radio" name="DeliveryOpt" id="DeliveryOpt2" /> <label for="DeliveryOpt2">Standard Delivery &pound;<span>10</span> (2 to 5 working days)</label>
+                                    <input type="radio" name="IsStandardDelivery" id="DeliveryOpt2" @(Model.IsStandardDelivery?"checked":"") /> <label for="DeliveryOpt2">Standard Delivery &pound;<span>10</span> (2 to 5 working days)</label>
                                 </div>
                             </div>
                             <div class="d-flex">
@@ -76,10 +90,22 @@
                 </div>
             </div>
             <div class="clearfix"></div>
+
+            <div class="modal fade basket-modal" id="modalAddress" role="dialog">
+                <div class="modal-dialog modal-lg">
+                    <!-- Modal content-->
+                    <div class="modal-content basket-modal-content">
+                        <div class="modal-body pl-3 pr-3">
+                            <button type="button" class="close mt-3" data-dismiss="modal">&times;</button>
+                            @Html.Action("GetAddressForm","Orders")
+                        </div>                       
+                    </div>
+                </div>
+            </div>
         }
 
         <div class="mt-4" id="updateCart">
-            @Html.Partial("Payments/_CartItems", Model)
+            @Html.Partial("Payments/_CartItems", Model.Cart)
         </div>
 
         @if (Model.RelatedProducts != null && Model.RelatedProducts.Any())
@@ -91,5 +117,13 @@
         }
     </div>
 </section>
+<script>
+    $(function () {
+        $("#linkChangeDelAddress,#linkChangeBillAddress").click(function () {
+            $("#modalAddress").modal("show");
+            return false;
+        });
+    })
+</script>
 
 
